[package]
name = "revue"
version = "0.1.0"
edition = "2021"
description = "AI-powered code review CLI"

[dependencies]
clap = { version = "4", features = ["derive"] }
rattles = "0.1"
owo-colors = "4"
comfy-table = "=7.1.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
git2 = { version = "0.19", default-features = false }
toml = "0.8"
thiserror = "2"
dirs = "6"
async-trait = "0.1"
open = "5"
